fixed a few alignment issues

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 }
 
 main {
-    width: calc(100% - 128px);
+    width: calc(100vw - 128px);
     margin: auto;
     margin-top: 64px;
     margin-bottom: 64px;
@@ -39,9 +39,14 @@ em {
 
 .row {
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
     gap: 32px;
-    grid-template-columns: 50% 50%;
     width: 100%;
+}
+
+.row>div {
+    position: relative;
+    overflow: auto;
 }
 
 @media only screen and (max-width: 860px) {
@@ -50,11 +55,14 @@ em {
         grid-template-columns: unset;
         grid-template-rows: auto auto;
     }
+    .row>div {
+        overflow: visible
+    }
     .chart-container {
-        width: calc(100vw - 16px);
+        width: calc(100vw - 32px);
     }
     main {
-        width: calc(100% - 16px);
+        width: calc(100vw - 32px);
     }
     footer {
         width: 100%;
